# leci_3ano

./: .gitattributes  README.md
AS/: README.md
AS/Projeto/: README.md  README_SENT.md
AS/Prática/: README.md
BD/: README.md
BD/APFE/: README.md
BD/APFT/: Apresentacao.pptx  README.md  Relatório P2G1 - Centro de Alto Rendimento.docx
BD/Prática/: README.md
IA/: README.md
IA/tpg-tetris-ia_equipa_2/: .gitignore  NMECS.txt  README.md  average_score.py  client.py  student.py  test.py  test_student.py
IA/tpi-1-2021/: README.md  cidades.py  tpi1_tests.py
IA/tpi-2-2022/: README.md  results.txt  semantic_network.py  tpi2.py  tpi2_tests.py
IA/tpi-2021/: results.txt  tpi1.py  tree_search.py
IHC/: README.md
IHC/Assignment 1/: IHC Heuristic - AT _ Finanças.docx  Medianas.xlsx  README.md
IHC/Assignment 2/: README.md
IHC/Paper Presentation/: README.md
PECI/: README.md  user-guide.docx
PECI/Report-Presentations/: GRAPHIC.psd  M1_Presentation.pptx  M2_Presentation.pptx  M3_Presentation.pptx  state-of-the-artv1.0.docx  state-of-the-artv2.0.docx  tecnologia-geral.psd  tecnologia-servidor.psd
RC-I/: README.md  file1024  file1500  file15K
RC-I/Prática/: PC1toPC2gateonpc2.pcap  PC2toPC1gateonPC2.pcap  aula2.pcap  aula3-2000.pcap  aula3-arp.pcap  aula3-padding.pcap  ftp.pcapng  (+11 more)
RC-II/: README.md
SIO/: README.md
SO/: README.md
SO/sofs21-so-5g2-1/src/grp_src/grp_inodeblocks/: CMakeLists.txt  grp_alloc_inodeblock.cpp  grp_free_inodeblocks.cpp  grp_get_inodeblock.cpp  grp_new_inode.cpp  grp_read_inodeblock.cpp  grp_remove_inode.cpp  grp_write_inodeblock.cpp
(+809 files in other folders)
